fixed editor covering intro css

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ h2 {
   text-align: center;
   /* height: 60%; */
   background-color: #fbfbfb;
-  margin-top: -6%;
+  margin-top: -3%;
   border: var(--border-width) solid #fff;
   /* border-radius: 5px; */
   /* outline: #fff solid 6px; */
